tests/ui/regions/regions-infer-proc-static-upvar.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/regions-infer-proc-static-upvar.rs:10:13
   |
LL |       let x = 3;
   |           - binding `x` declared here
LL |       let y = &x;
   |               ^^ borrowed value does not live long enough
LL | /     foo(move|| {
LL | |         let _a = *y;
LL | |     });
   | |______- argument requires that `x` is borrowed for `'static`
LL |   }
   |   - `x` dropped here while still borrowed
   |
note: requirement that the value outlives `'static` introduced here
  --> $DIR/regions-infer-proc-static-upvar.rs:4:19
   |
LL | fn foo<F:FnOnce()+'static>(_p: F) { }
   |                   ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
